--- a/scripts/temp.conf
+++ b/scripts/temp.conf
@@ -3,7 +3,7 @@
 #  FirstEncounter Input configuration file     #
 #                                              #
 ################################################
-set design _DESIGN_
+set design usb_phy
 set netlist "./${design}.v"
 set sdc "./${design}.sdc"
 set home "/home/linux/ieng6/ee260b/public/data/libraries"
